[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://YouTube-icon-full_color-e1480414478693.png" type="Texture" id=2]
[ext_resource path="res://398-3984001_itch-io-logo-clipart.png" type="Texture" id=3]
[ext_resource path="res://game-jolt-icon-9c9de177ec900ccd4947542f0f7fe42d7978cb8b.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Full"
tracks/0/type = "value"
tracks/0/path = NodePath("bar/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.454902, 0.623529, 0.819608, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "None"
tracks/0/type = "value"
tracks/0/path = NodePath("bar/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.364706, 0.552941, 0.792157, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "half"
tracks/0/type = "value"
tracks/0/path = NodePath("bar/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.364706, 0.552941, 0.792157, 0.392157 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bar" type="Control" parent="."]
margin_right = 600.0
margin_bottom = 11.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="bar"]
margin_right = 600.0
margin_bottom = 48.0
mouse_filter = 1
color = Color( 0.364706, 0.552941, 0.792157, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_right = 600.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="PopupMenu"]
margin_right = 600.0
margin_bottom = 14.0
text = "Transparency settings"
align = 1
valign = 1

[node name="Full" type="Button" parent="PopupMenu"]
margin_left = 232.0
margin_top = 16.0
margin_right = 267.0
margin_bottom = 36.0
text = "Full"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Half" type="Button" parent="PopupMenu"]
margin_left = 272.0
margin_top = 16.0
margin_right = 312.0
margin_bottom = 36.0
text = "Half"

[node name="none" type="Button" parent="PopupMenu"]
margin_left = 320.0
margin_top = 16.0
margin_right = 368.0
margin_bottom = 36.0
text = "none"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close settings" type="Button" parent="PopupMenu"]
margin_left = 577.0
margin_right = 596.0
margin_bottom = 20.0
text = "x"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Full = SubResource( 1 )
anims/None = SubResource( 2 )
anims/half = SubResource( 3 )

[node name="Yt" type="Button" parent="."]
margin_right = 64.0
margin_bottom = 48.0
icon = ExtResource( 2 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Itch io" type="Button" parent="."]
margin_left = 64.0
margin_right = 128.0
margin_bottom = 48.0
icon = ExtResource( 3 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gamejolt" type="Button" parent="."]
margin_left = 128.0
margin_right = 192.0
margin_bottom = 48.0
icon = ExtResource( 4 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="bar" to="." method="_on_bar_gui_input"]
[connection signal="pressed" from="PopupMenu/Full" to="." method="_on_Full_pressed"]
[connection signal="pressed" from="PopupMenu/Half" to="." method="_on_Half_pressed"]
[connection signal="pressed" from="PopupMenu/none" to="." method="_on_none_pressed"]
[connection signal="pressed" from="PopupMenu/close settings" to="." method="_on_close_settings_pressed"]
[connection signal="pressed" from="Yt" to="." method="_on_Yt_pressed"]
[connection signal="pressed" from="Itch io" to="." method="_on_Itch_io_pressed"]
[connection signal="pressed" from="Gamejolt" to="." method="_on_Gamejolt_pressed"]
